fixing image and placement

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <h1>Lockpicking Rocks</h1>
 
 Just ask The Moon on a stick LP&CBC Emporium.
-
-<img src="images/MOS5a.jpg" />
+<br />
+<img src="images/MOAS5a.jpg" />
 
 </body>
 </html>
