--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 Just ask The Moon on a stick LP&CBC Emporium.
 <br />
-<img src="images/MOAS5a.jpg" />
+<img src="images/MOAS5a.jpg" height="200" />
 
 </body>
 </html>
